Fix status bar z-index

--- a/pebble_tool/util/static/stylesheets/sensors.css
+++ b/pebble_tool/util/static/stylesheets/sensors.css
@@ -108,6 +108,7 @@ h1 {
   background-color: #aa0000;
   color: #fff;
   text-transform: uppercase;
+  z-index: 100;
 }
 .stuff {
 }
